[package]
name = "kvstore-rs"
version = "0.1.0"
edition = "2021"
description = "A simple key-value store"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
tempfile = "3.10.1"
walkdir = "2.5.0"
failure = "0.1.8"
crc = "3.2.1"
glob = "0.3.1"
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
